--- a/templates/base.html
+++ b/templates/base.html
@@ -3,34 +3,57 @@
 <!doctype html>
 <html lang="en">
     <head>
+
+        {% block meta %}
         <meta http-equiv="X-UA-compatible" content="edge">
         <meta charset="utf-8">
         <meta name="description" content="A range of amazing walking tours in Matlock Bath">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% endblock %}
 
+        {% block extrameta %}
+        {% endblock %}
+
+        {% block corecss %}
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+        {% endblock %}
 
+        {% block extracss %}
+        {% endblock %}
+
+        {% block corejs  %}
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
+        {% endblock %}
+
+        {% block extrajs %}
+        {% endblock %}
+
+        <title>Matlock Bath Walking Tours {% block extratitle %}{% endblock %}</title>
 
 
-        <title>Matlock Bath Walking Tours</title>
+
     </head>
     <body>
-        <h1>Matlock Bath Walking Tours</h1>
+        <header class="container-fluid fixed-top"></header>
 
+        <!-- Display space for any flash messages from Django -->
+         {% if messages %}
+        <div class="message-container"></div>
+        {% endif %}
 
+        {% block page_header %}
+        {% endblock %}
 
+        {% block content %}
+        {% endblock %}
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
+        {% block postloadjs %}
+        {% endblock %}
 
     </body>
 </html>
