Add html for 3 marketing columns

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,47 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">Matlock Bath Walking Tours</h1>
+    <!-- hero video? -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
+
+    <!-- 3 Walking Tours Marketing -->
+    <div class="container container-marketing">
+        <div class="row">
+            <!-- Tour 1 -->
+            <div class="col-lg-4">
+                <img src="" alt="" class="rounded-circle">
+                <h2>Tour 1</h2>
+                <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of helvetica.</p>
+                <p>
+                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                </p>
+            </div>
+            <!-- Tour 2 -->
+            <div class="col-lg-4">
+                <img src="" alt="" class="rounded-circle">
+                <h2>Tour 2</h2>
+                <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of helvetica.</p>
+                <p>
+                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                </p>
+            </div>
+
+            <!-- Tour 3 -->
+            <div class="col-lg-4">
+                <img src="" alt="" class="rounded-circle">
+                <h2>Tour 3</h2>
+                <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of helvetica.</p>
+                <p>
+                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                </p>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
