Add html for 3 x featurettes on homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -42,6 +42,49 @@
                     <a class="btn btn-secondary" href="#">Learn more »</a>
                 </p>
             </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h2>Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
+                    <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents. 
+                        Quinoa fam vinyl sriracha single-origin coffee, small batch tote
+                        bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New" alt="" width="500" height="500">
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-5">
+                    <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New" alt="" width="500" height="500">
+                </div>
+                <div class="col-md-7">
+                    <h2>Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
+                    <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
+                        Quinoa fam vinyl sriracha single-origin coffee, small batch tote
+                        bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h2>Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
+                    <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
+                        Quinoa fam vinyl sriracha single-origin coffee, small batch tote
+                        bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New" alt="" width="500" height="500">
+                </div>
+            </div>
+
         </div>
     </div>
 
