Add bootstrap css and block page_header to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
     <!-- hero video? -->
     <div class="container">
@@ -46,8 +54,8 @@
             <hr class="featurette-divider">
 
             <div class="row featurette">
-                <div class="col-md-7">
-                    <h2>Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
+                <div class="col-md-7 my-5 py-5">
+                    <h2 class="display-4">Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
                     <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents. 
                         Quinoa fam vinyl sriracha single-origin coffee, small batch tote
                         bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
@@ -63,8 +71,8 @@
                 <div class="col-md-5">
                     <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New" alt="" width="500" height="500">
                 </div>
-                <div class="col-md-7">
-                    <h2>Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
+                <div class="col-md-7 my-5 py-5">
+                    <h2 class="display-4">Tour 2 <span class="text-muted">It’ll blow your mind.</span></h2>
                     <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
                         Quinoa fam vinyl sriracha single-origin coffee, small batch tote
                         bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
@@ -74,8 +82,8 @@
             <hr class="featurette-divider">
 
             <div class="row featurette">
-                <div class="col-md-7">
-                    <h2>Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
+                <div class="col-md-7 my-5 py-5">
+                    <h2 class="display-4">Tour 3 <span class="text-muted">It’ll blow your mind.</span></h2>
                     <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
                         Quinoa fam vinyl sriracha single-origin coffee, small batch tote
                         bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
