--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,10 @@
               integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
         {% endblock %}
 
+        <!-- Fontawesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
         {% block extracss %}
         {% endblock %}
 
@@ -39,7 +43,9 @@
 
     </head>
     <body>
-        <header class="container-fluid fixed-top"></header>
+        <header class="container-fluid fixed-top">
+
+        </header>
 
         <!-- Display space for any flash messages from Django -->
          {% if messages %}
@@ -54,6 +60,99 @@
 
         {% block postloadjs %}
         {% endblock %}
+        <!-- Footer -->
+         <footer class="page-footer font-small footer-color pt-4">
+             <div class="container text-center text-md-left">
+                 <div class="row text-center text-md-left mt-3 pb-3">
+                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                         <h6 class="text-uppercase mb-4 font-weight-bold">Matlock Bath Walking Tours</h6>
+                         <p>
+                             Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
+                             <br> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents. Quinoa fam vinyl
+                             sriracha single-origin coffee,
+                             small batch tote bag umami banjo yr ethical listicle activated charcoal sartorial lyft.
+                         </p>
+                     </div>
 
+                     <hr class="w-100 clearfix d-md-none">
+
+                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                         <h6 class="text-uppercase mb-4 font-weight-bold">Buy Now</h6>
+                         <p>
+                             <a class="text-white" href="">Tours</a>
+                         </p>
+                     </div>
+
+                     <hr class="w-100 clearfix d-md-none">
+
+                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                         <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
+                         {% if user.is_authenticated %}
+                             <p>
+                                 <a class="text-white" href="">Logout</a>
+                             </p>
+                         {% else %}
+                             <p>
+                                 <a class="text-white" href="">Register</a>
+                             </p>
+                             <p>
+                                 <a class="text-white" href="">Login</a>
+                             </p>
+                         {% endif %}
+                     </div>
+
+                     <hr class="w-100 clearfix d-md-none">
+
+                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                         <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                         <p><i class="fas fa-envelope mr-3"></i> info@matlockbathtours.com</p>
+                         <p><i class="fas fa-phone mr-3"></i> +44 208 544 </p>
+                     </div>
+
+                 </div>
+                 <!-- Footer links -->
+                 <hr>
+
+                 <div class="row d-flex align-items-center">
+                     <div class="col-md-7 col-lg-8">
+                         <!--Copyright-->
+                         <p class="text-center text-md-left">Copyright © 2021
+                             <a href="">
+                                 <strong class="">Matlock Bath Tours</strong>
+                             </a>
+                         </p>
+                     </div>
+                     <div class="col-md-5 col-lg-4 ml-lg-0">
+                         <!-- Social buttons -->
+                         <div class="text-center text-md-right">
+                             <ul class="list-unstyled list-inline">
+                                 <li class="list-inline-item">
+                                     <a href="https://www.facebook.com/" class="btn-floating btn-sm mx-1"
+                                        target="_blank">
+                                         <i class="fab fa-facebook-f"></i>
+                                     </a>
+                                 </li>
+                                 <li class="list-inline-item">
+                                     <a href="https://www.twitter.com/" class="btn-floating btn-sm mx-1"
+                                        target="_blank">
+                                         <i class="fab fa-twitter"></i>
+                                     </a>
+                                 </li>
+                                 <li class="list-inline-item">
+                                     <a href="https://www.instagram.com/" class="btn-floating btn-sm mx-1"
+                                        target="_blank">
+                                         <i class="fab fa-instagram"></i>
+                                     </a>
+                                 </li>
+                             </ul>
+                         </div>
+                     </div>
+                     <!-- Grid column -->
+                 </div>
+                 <!-- Grid row -->
+             </div>
+             <!-- Footer Links -->
+         </footer>
+        <!-- Footer -->
     </body>
 </html>
