--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,7 @@
 
         {% block corecss %}
         <!-- CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
         {% endblock %}
 
         <!-- Fontawesome -->
@@ -29,9 +28,6 @@
 
         {% block corejs  %}
         <!-- Scripts -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
         {% endblock %}
 
         {% block extrajs %}
@@ -45,20 +41,41 @@
     <body>
     <!-- Header -->
         <header class="container-fluid fixed-top">
-            <div class="row">
-                <!-- Logo -->
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                    <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-hiking fa-lg" style="color:green;"></i>
-                        <h2 class="">Matlock Bath Tours</h2>
+            <!--Nav Bar-->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+                <div class="container">
+                    <!-- Navbar logo -->
+                    <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-hiking fa-lg"></i>
+                        <h2>Matlock Bath Tours</h2>
                     </a>
+                    <!-- Burger button -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Navbar content -->
+                    <div class="collapse navbar-collapse justify-content-right" id="navbarSupportedContent">
+                        <ul id="menu" class="navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="">Tours</a>
+                            </li>
+                            <!-- Available IF user authenticated -->
+                            <li class="nav-item active">
+                                <a class="nav-link" href="">Logout</a>
+                            </li>
+                            <!-- ElSE they can see this? -->
+                            <li class="nav-item active">
+                                <a class="nav-link" href="">Register</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="">Login</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-
-                <!-- Nav -->
-                <div class="col-12 col-lg-8 my-auto py-1 py-lg-0">
-
-                </div>
-            </div>
-
+            </nav>
         </header>
     <!-- /Header -->
 
@@ -169,5 +186,9 @@
              <!-- Footer Links -->
          </footer>
         <!-- /Footer -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
     </body>
 </html>
