Wire up base.css to settings.py

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,7 +44,7 @@
             <!-- Tour 3 -->
             <div class="col-lg-4">
                 <img src="" alt="" class="rounded-circle">
-                <h2>Tour 3</h2>
+                <h2 class="heading_two">Tour 3</h2>
                 <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of helvetica.</p>
                 <p>
                     <a class="btn btn-secondary" href="#">Learn more »</a>
