Add bootstrap card display of tours in tours.html Wire up tours.html to base.html navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,6 +38,17 @@ body {
     min-width: 260px;
 }
 
+/* ---------- Tours Page ----------*/
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: var(--mint);
+    z-index: -1;
+}
 /* ---------- Media Queries ----------*/
 
 @media (min-width: 992px) {
