--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                                 <a class="nav-link" href="{% url 'home' %}">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="">Tours</a>
+                                <a class="nav-link" href="{% url 'all_tours' %}">Tours</a>
                             </li>
                             <!-- Available IF user authenticated -->
                             {% if request.user.is_authenticated %}
