Add view, url and template for tour_detail

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,13 +103,13 @@
     <!-- /Header -->
 
         <!-- Display space for any flash messages from Django -->
-         {% if messages %}
+        {% if messages %}
         <div class="message-container"></div>
         {% endif %}
 
         {% block page_header %}
         {% endblock %}
-
+        <!-- Main Page Content -->
         {% block content %}
         {% endblock %}
 
