--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,11 +49,15 @@ body {
     background: var(--mint);
     z-index: -1;
 }
-/* ---------- Media Queries ----------*/
 
-@media (min-width: 992px) {
+/* ---------- Media Queries ----------*/
+/* DOESN"T NEED TO BE IN A MQ NOW TBC*/
+@media (min-width: 0px) {
 
     .header-container {
-        padding-top: 164px;
+        padding-top: 100px;
     }
 }
+
+
+
