--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,6 +38,49 @@ body {
     min-width: 260px;
 }
 
+/* ---------- Home Page ----------*/
+
+header {
+  position: relative;
+  background-color: red;
+  height: 100vh;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden;
+}
+
+header video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+header .container {
+  position: relative;
+  z-index: 2;
+}
+
+header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+
+
+
+
 /* ---------- Tours Page ----------*/
 
 .overlay {
@@ -50,6 +93,8 @@ body {
     z-index: -1;
 }
 
+
+
 /* ---------- Media Queries ----------*/
 /* DOESN"T NEED TO BE IN A MQ NOW TBC*/
 @media (min-width: 0px) {
@@ -57,6 +102,15 @@ body {
     .header-container {
         padding-top: 100px;
     }
+}
+
+@media (pointer: coarse) and (hover: none) {
+  header {
+    background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+  }
+  header video {
+    display: none;
+  }
 }
 
 
