--- a/templates/base.html
+++ b/templates/base.html
@@ -40,81 +40,17 @@
 
     </head>
     <body>
-    <!-- Header -->
-        <header class="header-container">
-            <!--Nav Bar-->
-            <nav class="container-fluid fixed-top navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container">
-                    <!-- Navbar logo -->
-                    <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-hiking fa-lg"></i>
-                        <h2>Matlock Bath Tours</h2>
-                    </a>
-                    <!-- Burger button -->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <!-- Navbar content -->
-                    <div class="collapse navbar-collapse justify-content-right" id="navbarSupportedContent">
-                        <ul id="menu" class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'home' %}">Home</a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'all_tours' %}">Tours</a>
-                            </li>
-                            <!-- Available IF user authenticated -->
-                            {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                    <a href="" class="nav-link">Product Management</a>
-                                {% endif %}
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                            </li>
-                            <!-- ElSE they can see this? -->
-                            {% else %}
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                            </li>
-                            {% endif %}
-                            <li class="list-inline-item">
-                                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                                   href="">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                        <p class="my-0">
-                                            {% if grand_total %}
-                                                ${{ grand_total|floatformat:2 }}
-                                            {% else %}
-                                                $0.00
-                                            {% endif %}
-                                        </p>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-            </nav>
-        </header>
-    <!-- /Header -->
 
         <!-- Display space for any flash messages from Django -->
         {% if messages %}
         <div class="message-container"></div>
         {% endif %}
 
-        {% block page_header %}
-        {% endblock %}
+
         <!-- Main Page Content -->
         {% block content %}
         {% endblock %}
 
-        {% block postloadjs %}
-        {% endblock %}
         <!-- Footer -->
          <footer class="page-footer font-small footer-color pt-4">
              <div class="container text-center text-md-left">
@@ -178,7 +114,7 @@
                          </p>
                      </div>
                      <div class="col-md-5 col-lg-4 ml-lg-0">
-                         <!-- Social buttons -->
+                         <!-- Social -->
                          <div class="text-center text-md-right">
                              <ul class="list-unstyled list-inline">
                                  <li class="list-inline-item">
