--- a/tours/templates/tours/tours.html
+++ b/tours/templates/tours/tours.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{%  include 'navbar.html' %}
 
 {% block page_header %}
     <div class="container header-container">
