Fix bug with navbar by moving include tag inside block content

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
-{%  include 'navbar.html' %}
+{% include "navbar.html" %}
 
 {% block content %}
+    {% include "navbar.html" %}
     <!-- hero video code snippet from https://startbootstrap.com/snippets/video-header-->
     <header>
         <div class="overlay">
