--- a/templates/base.html
+++ b/templates/base.html
@@ -95,9 +95,8 @@
                      <hr class="w-100 clearfix d-md-none">
 
                      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                         <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                         <h6 class="text-uppercase mb-4 font-weight-bold">Contact Us</h6>
                          <p><i class="fas fa-envelope mr-3"></i> info@matlockbathtours.com</p>
-                         <p><i class="fas fa-phone mr-3"></i> +44 208 544 </p>
                      </div>
 
                  </div>
