Add html for sort and search function on tours.html wire up search count back to home view

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% include "navbar.html" %}
 
+{% block page_header %}
+{% endblock %}
+
 {% block content %}
     {% include "navbar.html" %}
     <!-- hero video code snippet from https://startbootstrap.com/snippets/video-header-->
