Add home link to footer and wire up to home view

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,9 @@
                              </p>
                          {% else %}
                              <p>
+                                 <a class="text-white" href="{% url 'home' %}">Home</a>
+                             </p>
+                             <p>
                                  <a class="text-white" href="">Register</a>
                              </p>
                              <p>
