Add page_header to tours.html to push down main block content

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,9 @@
 
     </head>
     <body>
+        <!-- Header Container -->
+        {% block page_header %}
+        {% endblock %}
 
         <!-- Display space for any flash messages from Django -->
         {% if messages %}
