--- a/tours/templates/tours/tours.html
+++ b/tours/templates/tours/tours.html
@@ -2,22 +2,23 @@
 {% load static %}
 
 
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
             <div class="col">
-                <h2>test</h2>
             </div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
+    {% include "navbar.html" %}
 
     <div class="overlay"></div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col text-center mt-3">
+                <div class="col text-center mt-5">
                     <h2 class="">Tours</h2>
                     <hr class="w-50 mb-1">
 
