--- a/tours/templates/tours/tour_detail.html
+++ b/tours/templates/tours/tour_detail.html
@@ -3,41 +3,46 @@
 
 
 {% block page_header %}
-
+    <div class="container header-container">
+        <div class="row">
+            <div class="col">
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content %}
-    {%  include 'navbar.html' %}
+    {% include 'navbar.html' %}
     <div class="overlay"></div>
-        <div class="container-fluid">
-            <div class="row">
+    <div class="container">
+        <div class="row mt-3">
             <!-- img col -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="image-container my-5">
-                        {% if tour.image %}
-                            <!-- Opens tour image in new window -->
-                            <a href="{{ tour.image.url }}" target="_blank">
-                                <img class="card-img-top img-fluid" src="{{ tour.image.url }}" alt="{{ tour.name }}">
-                            </a>
-                        {% else %}
-                            <a href="">
-                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
-                                     alt="{{ tour.name }}">
-                            </a>
-                        {% endif %}
-                    </div>
+            <div class="col-12 col-lg-6">
+                <div class="image-container my-5">
+                    {% if tour.image %}
+                        <!-- Opens tour image in new window -->
+                        <a href="{{ tour.image.url }}" target="_blank">
+                            <img class="card-img-top img-fluid" src="{{ tour.image.url }}" alt="{{ tour.name }}">
+                        </a>
+                    {% else %}
+                        <a href="">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                 alt="{{ tour.name }}">
+                        </a>
+                    {% endif %}
                 </div>
+            </div>
             <!-- tour details col -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="product-details-container mb-5 mt-md-5">
+            <div class="col-12 col-lg-6">
+                <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ tour.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ tour.price }}</p>
                     <p class="mt-3">{{ tour.description }}</p>
                 </div>
 
-                </div>
             </div>
         </div>
-                            <
+    </div>
+    <
 
 {% endblock %}
