--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,13 +13,12 @@
                 <source src="{% static 'country.mp4' %}" type="video/mp4">
             </video>
             <div class="container h-100">
-                <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1800"
-                     class="d-flex h-100 text-center align-items-center">
+                <div class="d-flex h-100 text-center align-items-center">
                     <div class="w-100 text-white for-wide-screen">
-                        <h2 class="display-4 font-weight-normal">Search walking tours today</h2>
+                        <h3 class="font-weight-light">Search walking tours today</h3>
                         <!-- row -->
                         <div class="row d-flex justify-content-center">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <!-- Search form -->
                                 <form action=" {% url 'all_tours' %} " method="GET" class="header__search">
                                     <div class="input-group search-input">
@@ -43,87 +42,87 @@
 
     <!-- 3 Walking Tours Marketing -->
 
-        <div class="container container-marketing">
-            <div class="row">
-                <!-- Tour 1 -->
-                <div class="col-lg-4">
-                    <img src="" alt="" class="rounded-circle">
-                    <h2>Tour 1</h2>
-                    <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
-                        helvetica.</p>
-                    <p>
-                        <a class="btn btn-secondary" href="#">Learn more »</a>
-                    </p>
+    <div class="container container-marketing">
+        <div class="row">
+            <!-- Tour 1 -->
+            <div class="col-lg-4">
+                <img src="" alt="" class="rounded-circle">
+                <h2>Tour 1</h2>
+                <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
+                    helvetica.</p>
+                <p>
+                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                </p>
+            </div>
+            <!-- Tour 2 -->
+            <div class="col-lg-4">
+                <img src="" alt="" class="rounded-circle">
+                <h2>Tour 2</h2>
+                <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
+                    helvetica.</p>
+                <p>
+                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                </p>
+            </div>
+
+            <!-- Tour 3 -->
+            <div class="col-lg-4">
+                <img src="" alt="" class="rounded-circle">
+                <h2 class="heading_two">Tour 3</h2>
+                <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
+                    helvetica.</p>
+                <p>
+                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                </p>
+            </div>
+
+
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-7 my-5 py-5">
+                    <h2 class="display-4">Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
+                    <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
+                        Quinoa fam vinyl sriracha single-origin coffee, small batch tote
+                        bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
                 </div>
-                <!-- Tour 2 -->
-                <div class="col-lg-4">
-                    <img src="" alt="" class="rounded-circle">
-                    <h2>Tour 2</h2>
-                    <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
-                        helvetica.</p>
-                    <p>
-                        <a class="btn btn-secondary" href="#">Learn more »</a>
-                    </p>
+                <div class="col-md-5">
+                    <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New"
+                         alt="" width="500" height="500">
                 </div>
+            </div>
 
-                <!-- Tour 3 -->
-                <div class="col-lg-4">
-                    <img src="" alt="" class="rounded-circle">
-                    <h2 class="heading_two">Tour 3</h2>
-                    <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
-                        helvetica.</p>
-                    <p>
-                        <a class="btn btn-secondary" href="#">Learn more »</a>
-                    </p>
+            <hr class="featurette-divider">
+
+            <div class="row featurette">
+                <div class="col-md-5">
+                    <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New"
+                         alt="" width="500" height="500">
                 </div>
+                <div class="col-md-7 my-5 py-5">
+                    <h2 class="display-4">Tour 2 <span class="text-muted">It’ll blow your mind.</span></h2>
+                    <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
+                        Quinoa fam vinyl sriracha single-origin coffee, small batch tote
+                        bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
+                </div>
+            </div>
 
+            <hr class="featurette-divider">
 
-    <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7 my-5 py-5">
+                    <h2 class="display-4">Tour 3 <span class="text-muted">It’ll blow your mind.</span></h2>
+                    <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
+                        Quinoa fam vinyl sriracha single-origin coffee, small batch tote
+                        bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New"
+                         alt="" width="500" height="500">
+                </div>
+            </div>
 
-    <div class="row featurette">
-        <div class="col-md-7 my-5 py-5">
-            <h2 class="display-4">Tour 1 <span class="text-muted">It’ll blow your mind.</span></h2>
-            <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
-                Quinoa fam vinyl sriracha single-origin coffee, small batch tote
-                bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
         </div>
-        <div class="col-md-5">
-            <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New"
-                 alt="" width="500" height="500">
-        </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New"
-                 alt="" width="500" height="500">
-        </div>
-        <div class="col-md-7 my-5 py-5">
-            <h2 class="display-4">Tour 2 <span class="text-muted">It’ll blow your mind.</span></h2>
-            <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
-                Quinoa fam vinyl sriracha single-origin coffee, small batch tote
-                bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
-        </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-        <div class="col-md-7 my-5 py-5">
-            <h2 class="display-4">Tour 3 <span class="text-muted">It’ll blow your mind.</span></h2>
-            <p> Post-ironic lo-fi pork belly, stumptown +1 locavore succulents.
-                Quinoa fam vinyl sriracha single-origin coffee, small batch tote
-                bag umami banjo yr ethical listicle activated charcoal sartorial lyft.</p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://eu-assets.simpleview-europe.com/peakdistrict/imageresizer/?image=%2Fdmsimgs%2FMatlcok-Bath-2-1220-x-620_1539277098.jpg&action=ProductDetail_New"
-                 alt="" width="500" height="500">
-        </div>
-    </div>
-
-    </div>
     </div>
 
 {% endblock %}
