Add title to tours marketing feature and boostrap classes

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
             <div class="container h-100">
                 <div class="d-flex h-100 text-center align-items-center">
                     <div class="w-100 text-white for-wide-screen">
-                        <h3 class="font-weight-light">Search walking tours today</h3>
+                        <span class="display-4 font-weight-light">Search walking tours today</span>
                         <!-- row -->
                         <div class="row d-flex justify-content-center">
                             <div class="col-md-4">
@@ -43,11 +43,19 @@
     <!-- 3 Walking Tours Marketing -->
 
     <div class="container container-marketing">
-        <div class="row">
+        <div class="text-center">
+            <div class="row mt-3">
+                <div class="col s12">
+                    <h1>Tours</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5 mb-5">
+
             <!-- Tour 1 -->
             <div class="col-lg-4">
                 <img src="" alt="" class="rounded-circle">
-                <h2>Tour 1</h2>
+                <h2>Matlock Bath River</h2>
                 <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
                     helvetica.</p>
                 <p>
@@ -57,7 +65,7 @@
             <!-- Tour 2 -->
             <div class="col-lg-4">
                 <img src="" alt="" class="rounded-circle">
-                <h2>Tour 2</h2>
+                <h2>Matlock Bath Heights</h2>
                 <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
                     helvetica.</p>
                 <p>
@@ -66,9 +74,9 @@
             </div>
 
             <!-- Tour 3 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 mb-5">
                 <img src="" alt="" class="rounded-circle">
-                <h2 class="heading_two">Tour 3</h2>
+                <h2 class="">Matlock Bath Town</h2>
                 <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
                     helvetica.</p>
                 <p>
