--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,13 +44,13 @@
 
     <div class="container container-marketing">
         <div class="text-center">
-            <div class="row mt-3">
+            <div class="row mt-5">
                 <div class="col s12">
                     <h1>Tours</h1>
                 </div>
             </div>
         </div>
-        <div class="row mt-5 mb-5">
+        <div class="row mt-3 mb-5">
 
             <!-- Tour 1 -->
             <div class="col-lg-4">
@@ -59,9 +59,10 @@
                 <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
                     helvetica.</p>
                 <p>
-                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                    <a class="btn btn-secondary" href="{% url 'all_tours' %}">Learn more »</a>
                 </p>
             </div>
+
             <!-- Tour 2 -->
             <div class="col-lg-4">
                 <img src="" alt="" class="rounded-circle">
@@ -69,7 +70,7 @@
                 <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
                     helvetica.</p>
                 <p>
-                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                    <a class="btn btn-secondary" href="{% url 'all_tours' %}">Learn more »</a>
                 </p>
             </div>
 
@@ -80,7 +81,7 @@
                 <p>I'm baby neutra sartorial street art, raclette direct trade roof party selfies hell of
                     helvetica.</p>
                 <p>
-                    <a class="btn btn-secondary" href="#">Learn more »</a>
+                    <a class="btn btn-secondary" href="{% url 'all_tours' %}">Learn more »</a>
                 </p>
             </div>
 
