--- a/tours/templates/tours/tours.html
+++ b/tours/templates/tours/tours.html
@@ -24,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="tours-container col-10 offset-1">
-                <!-- Sort options/ search count feature -->
+                <!-- Sort feature -->
                     <div class="row mt-1 mb-2">
                         <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                             <div class="sort-select-wrapper w-50">
@@ -50,6 +50,7 @@
 
                                 </select>
                             </div>
+                        <!-- Search count feature -->
                             <div class="col-12 col-md-6 order-md-first">
                                 <p class="text-muted mt-3 text-center text-md-left">
                                     {% if search_term or current_sorting != 'None_None' %}
@@ -101,4 +102,31 @@
         </div>
 
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <!-- Add jQuery to make select sort feature work -->
+    <script type="text/javascript">
+        $('#sort-selector').change(function () {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if (selectedVal != "reset") {
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
