--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,10 +2,41 @@
 {% load static %}
 
 {% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col">
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content %}
     {% include "navbar.html" %}
+    <!-- User can view shopping bag feature -->
+    <div class="container mb-2">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Cart</h2>
+                <hr>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col">
+                {% if bag_items %}
+                    <div class="table-responsive rounded"></div>
+                {% else %}
+                    <p class="lead mb-5">Your bag is empty.</p>
+                    <a href="{% url 'all_tours' %}" class="btn rounded-0 btn-lg">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">View Tours</span>
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
