--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,15 @@ body {
     font-family: 'open sans', sans-serif;
 }
 
+/* Displays font awesome icons in a visually appealing way */
 
+.icon {
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    height: 1.5rem;
+    width: 1.5rem;
+}
 
 /* ---------- Colours ----------*/
 
