--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -56,28 +56,19 @@
                                             </thead>
                                             <tbody>
                                             <tr>
-                                                <th scope="row" class="border-0">
-                                                    <div class="p-2">
-                                                        <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-1_zrifhn.jpg"
-                                                             alt="" width="70" class="img-fluid rounded shadow-sm">
-                                                        <div class="ml-3 d-inline-block align-middle">
-                                                            <h5 class="mb-0"><a href="#"
-                                                                                class="text-dark d-inline-block align-middle">{{ item.tour.name }}</a>
-                                                            </h5>
-                                                        </div>
-                                                    </div>
-                                                </th>
+                                                <td class="border-0 align-middle">
+                                                    <strong>{{ item.tour.name }}</strong></td>
                                                 <td class="border-0 align-middle">
                                                     <strong>£{{ item.tour.price }}</strong></td>
                                                 <td class="border-0 align-middle">
-                                                    <form class="form update-form" action="" method="POST">
+                                                    <form class="form update-form" action="{% url 'adjust_bag' item.tour_id %}" method="POST">
                                                         {% csrf_token %}
                                                         <div class="form-group">
                                                             <div class="input-group">
                                                                 <div class="input-group-prepend">
                                                                     <button class="decrement-qty btn btn-sm rounded-0"
-                                                                            data-item_id="{{ item.item_id }}"
-                                                                            id="decrement-qty_{{ item.item_id }}">
+                                                                            data-item_id="{{ item.tour_id }}"
+                                                                            id="decrement-qty_{{ item.tour_id }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
                                                             </span>
@@ -87,12 +78,12 @@
                                                                        type="number"
                                                                        name="quantity" value="{{ item.quantity }}"
                                                                        min="1" max="99"
-                                                                       data-item_id="{{ item.item_id }}"
-                                                                       id="id_qty_{{ item.item_id }}">
+                                                                       data-item_id="{{ item.tour_id }}"
+                                                                       id="id_qty_{{ item.tour_id }}">
                                                                 <div class="input-group-append">
                                                                     <button class="increment-qty btn btn-sm rounded-0"
-                                                                            data-item_id="{{ item.item_id }}"
-                                                                            id="increment-qty_{{ item.item_id }}">
+                                                                            data-item_id="{{ item.tour_id }}"
+                                                                            id="increment-qty_{{ item.tour_id }}">
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
                                                             </span>
@@ -101,12 +92,10 @@
 
                                                             </div>
                                                         </div>
-
+                                                        <a class="update-link text-info"><small>Update</small></a>
                                                     </form>
-
-
                                                 </td>
-                                                <td class="border-0 align-middle"><a href="#" class="text-dark"><i
+                                                <td class="border-0 align-middle"><a href="#" class="remove-item text-dark" id="remove_{{ item.tour_id }}"><i
                                                         class="fa fa-trash"></i></a></td>
                                             </tr>
                                             </tbody>
@@ -162,4 +151,28 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super}}
+    {%  include "tours/includes/quantity_input_script.html" %}
+
+    <script type="text/javascript">
+    //Update quantity in bag on click
+    $('.update-link').click(function(e) {
+        let form = $(this).prev('.update-form');
+        form.submit();
+    })
+    //remove item from bag on click
+    $('.remove-item').click(function(e) {
+        let itemId = $(this).attr('id').split('remove_')[1];
+        let url = `/bag/remove/${itemId}`;
+
+        $.post(url)
+         .done(function() {
+             location.reload();
+         });
+    })
+
+    </script>
 {% endblock %}
