Update README.md with registered user stories for shopping bag and checkout

--- a/tours/templates/tours/tour_detail.html
+++ b/tours/templates/tours/tour_detail.html
@@ -47,16 +47,19 @@
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn rounded-0" data-item_id="{{ tour.id }}" id="decrement-qty_{{ tour.id }}">
+                                            <button class="decrement-qty btn rounded-0" data-item_id="{{ tour.id }}"
+                                                    id="decrement-qty_{{ tour.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ tour.id }}" id="id_qty_{{ tour.id }}">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                               min="1" max="99" data-item_id="{{ tour.id }}" id="id_qty_{{ tour.id }}">
 
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn rounded-0" data-item_id="{{ tour.id }}" id="increment-qty_{{ tour.id }}">
+                                            <button class="increment-qty btn rounded-0" data-item_id="{{ tour.id }}"
+                                                    id="increment-qty_{{ tour.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
                                                 </span>
@@ -73,7 +76,8 @@
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
+                                       value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
@@ -84,11 +88,49 @@
             </div>
         </div>
     </div>
-    <
+     <!-- Review Tour Form -->
+      <div class="my-4">
+
+        <h4>Reviews</h4>
+        <p>
+
+        </p>
+        <div class="comments" style="padding: 10px;">
+          <p class="font-weight-bold">
+
+            <span class=" text-muted font-weight-normal">
+
+            </span>
+          </p>
+
+        </div>
+
+      </div>
+
+    <!-- Review Tour -->
+    <div class="card card-body mb-5 shadow-sm">
+
+            <div class="alert alert-success my-4" role="alert">
+                Your review is awaiting moderation
+            </div>
+
+            <div class=" my-4">
+                <h5>Leave a review:</h5>
+                <br>
+                <form method="post">
+                    <div class="form-group">
+
+                    </div>
+                    <button type="submit" class="btn btn-info">Submit</button>
+                </form>
+            </div>
+            </div>
+
+    </div>
 
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super}}
-    {%  include "tours/includes/quantity_input_script.html" %}
+    {{ block.super }}
+    {% include "tours/includes/quantity_input_script.html" %}
 {% endblock %}
