Add custom css for toasts

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -46,8 +46,21 @@ body {
     min-width: 260px;
 }
 
-.message-container {
+/* ---------- Bootstrap Toasts ----------*/
 
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
 }
 /* ---------- Home Page ----------*/
 
