Add js to integrate stripe payments in checkout app

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,8 @@
         {% endblock %}
 
         {% block corejs  %}
-        <!-- Scripts -->
+        <!-- Stripe -->
+        <script src="https://js.stripe.com/v3/"></script>
         {% endblock %}
 
         {% block extrajs %}
