--- a/tours/templates/tours/tour_detail.html
+++ b/tours/templates/tours/tour_detail.html
@@ -88,43 +88,40 @@
             </div>
         </div>
     </div>
+
      <!-- Review Tour Form -->
       <div class="my-4">
-
         <h4>Reviews</h4>
+
+      <!-- View Reviews on page -->
+          <div>
+          <p>
+              {% if reviews.count > 0 %}
+                  {% for review in reviews %}
+                  {% endfor %}
+              {% endif %}
+          </p>
+          </div>
+      <!-- If not registered/login to write a review -->
         <p>
             To write a review <a href="{% url 'account_login' %}">login.</a>
             Don't have an account? Sign up <a href="{% url 'account_signup' %}">here.</a>
         </p>
-        <div class="comments" style="padding: 10px;">
-          <p class="font-weight-bold">
-
-            <span class=" text-muted font-weight-normal">
-
-            </span>
-          </p>
-
-        </div>
-
       </div>
 
-    <!-- Review Tour -->
+    <!-- Review Tour if logged in can see-->
     <div class="card card-body mb-5 shadow-sm">
-        {% if user.authenticated %}
-            <div class="alert alert-success my-4" role="alert">
-                Your review is awaiting moderation
-            </div>
-
-            <div class=" my-4">
-                <h5>Leave a review:</h5>
-                <br>
-                <form method="post">
-                    <div class="form-group">
-
-                    </div>
-                    <button type="submit" class="btn btn-info">Submit</button>
+        {% if request.user.is_authenticated %}
+        <div class="row row mt-5">
+            <div class="col-sm-12">
+                <h2>Write your review</h2>
+                    <form action="{% url 'customer_review' tour.pk %}" method="POST">
+                    {% csrf_token %}
+                    <textarea name="comment" minlength="10" required></textarea>
+                    <input type="submit" class="btn btn-primary" value="Submit">
                 </form>
             </div>
+        </div>
         {% endif %}
 
     </div>
